# wind2geojson

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/wind2geojson/: geojson_handler.hpp  ros_handler.hpp
launch/: wind2geojson.launch
logs/: 11-04-2023 14-38-39.geojson  14-04-2023 12-24-12.geojson  14-04-2023 13-45-40.geojson  20230414T141550.geojson  20230418T162530.geojson  20230419T131806.geojson  20230419T141356.geojson
src/: main.cpp
src/lib/: ros_handler.cpp
srv/: start_stop_recording.srv
